<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scroll_view_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            style="@style/main_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/header_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ur_details_log"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/text_input_layout_with_top_margin_36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:placeholderText="ex: abc@def.com">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/password_text_input_layout_with_top_margin_28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            style="@style/orange_button_style"
            android:layout_width="match_parent"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout" />

        <TextView
            android:id="@+id/forget_password"
            style="@style/text_view_for_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/forget_password"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <TextView
            android:id="@+id/textView3"
            style="@style/text_view_for_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:text="@string/or_log_with"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/layout_margin_top_28"
            android:background="@drawable/facebook_background"
            android:drawableStart="@drawable/facebook"
            android:drawableTint="@color/white"
            android:paddingStart="75dp"
            android:paddingEnd="75dp"
            android:text="@string/login_with_facebook"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/google_background"
            android:drawableStart="@drawable/google_plus"
            android:drawableTint="@color/white"
            android:paddingStart="84dp"
            android:paddingEnd="84dp"
            android:text="@string/login_with_google"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebook" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google">

            <TextView
                android:id="@+id/do_not_have"
                style="@style/text_view_for_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_bold"
                android:text="@string/sign_up"
                android:textColor="@color/orange_pantone"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>