<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scroll_view_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgetPassword">

    <TextView
        android:id="@+id/textView4"
        style="@style/main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/forget_details"
        android:textColor="@color/gray_web"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/text_input_layout_with_top_margin_36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:placeholderText="ex: abc@def.com">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            style="@style/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send"
        style="@style/orange_button_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="34dp"
        android:text="@string/send"
        app:layout_constraintTop_toBottomOf="@+id/email_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>