<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scroll_view_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            style="@style/main_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/header_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ur_details_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/text_input_layout_with_top_margin_36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text"
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/general_text_input_layout_with_top_margin_28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_layout"
            app:placeholderText="ex: abc@def.com">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile_layout"
            style="@style/general_text_input_layout_with_top_margin_28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout"
            app:prefixText="+20">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_text"
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_layout"
            style="@style/general_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobile_layout"
            app:placeholderText="ex: egypt-xxxx-xxxx-xxxx">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_text"
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/password_text_input_layout_with_top_margin_28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/pass_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="28dp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_pass_layout"
            app:layout_constraintEnd_toEndOf="@+id/password_layout"
            app:layout_constraintStart_toStartOf="@+id/password_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_layout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/chars"
                    android:layout_width="20dp"
                    style="@style/card_view">

                    <ImageView
                        android:layout_width="15dp"
                        style="@style/image_view" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/text_view_vrefication"
                    android:text="@string/char_8" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/uppercase"
                    android:layout_width="20dp"
                    style="@style/card_view">

                    <ImageView
                        android:layout_width="15dp"
                        style="@style/image_view" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/text_view_vrefication"
                    android:text="@string/minumum_one_upper" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/numbers"
                    android:layout_width="20dp"
                    style="@style/card_view">

                    <ImageView
                        android:layout_width="15dp"
                        style="@style/image_view" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/text_view_vrefication"
                    android:text="@string/min_one_num" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/symbols"
                    android:layout_width="20dp"
                    style="@style/card_view">

                    <ImageView
                        android:layout_width="15dp"
                        style="@style/image_view" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/text_view_vrefication"
                    android:text="@string/min_one_special" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_pass_layout"
            style="@style/password_text_input_layout_with_top_margin_28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_verification">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_pass_text"
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up"
            style="@style/orange_button_style"
            android:layout_width="match_parent"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@+id/confirm_pass_layout" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up">

            <TextView
                android:id="@+id/do_not_have"
                style="@style/text_view_for_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_bold"
                android:text="@string/login"
                android:textColor="@color/orange_pantone"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>